# wbw_hw1

./: CMakeLists.txt  README.md
src/: algebra.c  main.c
